syntax = "proto3";

package com.distkv.rpc.protobuf;

import "common_pb.proto";

option java_package="com.distkv.rpc.protobuf.generated";
option java_outer_classname = "SortedListProtocol";
option cc_generic_services = true;

message SortedListEntity {
    int32 score = 1;
    string member = 2;
}

message SlistPutRequest {
    string key = 1;
    repeated SortedListEntity list = 2;
}

message SlistPutResponse {
    Status status = 1;
}

message SlistTopRequest {
    string key = 1;
    uint32 count = 2;
}

message SlistTopResponse {
    Status status = 1;
    repeated SortedListEntity list = 2;
}

message SlistIncrScoreRequest {
    string key = 1;
    string member = 2;
    int32 delta = 3;
}

message SlistIncrScoreResponse {
    Status status = 1;
}

message SlistPutMemberRequest {
    string key = 1;
    int32 score = 2;
    string member = 3;
}

message SlistPutMemberResponse {
    Status status = 1;
}

message SlistRemoveMemberRequest {
    string key = 1;
    string member = 2;
}

message SlistRemoveMemberResponse {
    Status status = 1;
}

message SlistGetMemberRequest {
    string key = 1;
    string member = 2;
}

message SlistGetMemberResponse {
    Status status = 1;
    SortedListEntity entity = 2;
    uint32 count = 3;
}

